fix resend from field

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
           setStatus({ type: "", message: "" });
 
           try {
-            const response = await fetch("/api/contact", {
+            const response = await fetch("contact.php", {
               method: "POST",
               headers: {
                 "Content-Type": "application/json",
